[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 320.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShieldBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ShieldBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SHIELD: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeatBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 20)
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HeatBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ENERGY: 100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponInfo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BLASTER [100%]"
